# azik-generator-api

./: Cargo.toml
.github/workflows/: shuttle_deploy.yml
src/: main.rs
