[package]
name = "azik-generator-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.51.0"
shuttle-runtime = "0.51.0"
tokio = "1.28.2"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.137"
clap = { version = "4.5.27", features = ["derive"] }
